# link_shortener

./: .env-sample  .env_db-sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
account/: admin.py  apps.py  forms.py  models.py  pipeline.py  urls.py  views.py
account/management/commands/: start_init.py
account/templates/account/: login.html  register.html
blacklist/: admin.py  apps.py  enums.py  models.py  urls.py  utils.py  views.py
blacklist/templates/admin/: custom_file_upload.html
blacklist/templates/admin/blacklist/uploadedfile/: change_list.html
core/: celery.py  settings.py  urls.py
shortener/: admin.py  apps.py  enums.py  forms.py  models.py  serializers.py  tasks.py  urls.py  urls_api.py  views.py
shortener/static/css/: status_styles.css
shortener/templates/shortener/: index.html  redirect_confirm.html  redirect_notify.html
shortener/utils/: create_short_link.py  excel_processor.py  generators.py  manage_colour_host.py  parsers.py
templates/: base.html
