[project]
name = "link-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Pigolev Timofey"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==4.2.27)",
    "gunicorn (==23.0.0)",
    "celery (==5.5.3)",
    "django-celery-results (==2.6.0)",
    "django-cleanup (==9.0.0)",
    "django-cors-headers (==4.4.0)",
    "flower (==2.0.1)",
    "openpyxl (==3.1.5)",
    "pandas (==2.0.3)",
    "pillow (==10.4.0)",
    "psycopg2-binary (==2.9.9)",
    "qrcode (==7.4.2)",
    "redis (==6.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
